--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!--link to css-->
 	<link href="style.css" rel="stylesheet" type="text/css">
 
-	<title>Yue Jiao</title>
+	<title>Cunji Song's personal site</title>
 </head>
 <body>
 
@@ -83,8 +83,8 @@
 
 		<div class="responsive">
 			<div class="experience">
-				<a target="_blank" href="img/garbage_classification.jpg">
-					<img src="img/garbage_classification.jpg" alt="Garbage">
+				<a target="_blank" href="img/garbage_classification2.jpg">
+					<img src="img/garbage_classification2.jpg" alt="Garbage">
 				</a>
 				<div class="desc">Compus Competition: Garbage classification assistance-especially useful for helping citizens classify the recyclable and non-recyclable trash,
 					Python, AWS, Sequel Pro, SQL, JavaScript,  HTML, CSS, Bootstrap</div>
@@ -96,9 +96,36 @@
 				<a target="_blank" href="img/alien_invasion.png">
 					<img src="img/alien_invasion.png" alt="alien">
 				</a>
-				<div class="desc">Fancy game competition: An Alien Invasion game written in Python programming language using Pygame library</div>
+				<div class="desc">Fancy Game Competition: An Alien Invasion game written in Python programming language using Pygame library --Python, Pygame, AWS, Git</div>
 			</div>
 		</div>
+
+		<!-- <div class="responsive">
+			<div class="experience">
+				<a target="_blank" href="img/recharge.png">
+					<img src="img/recharge.png" alt="recharge">
+				</a>
+				<div class="desc">Global Game Jam 2019: Built a 2D adventure game where the player can rest and start again at home. Unity, Photoshop, Git</div>
+			</div>
+		</div>
+
+		<div class="responsive">
+			<div class="experience">
+				<a target="_blank" href="img/recharge.png">
+					<img src="img/recharge.png" alt="recharge">
+				</a>
+				<div class="desc">Global Game Jam 2019: Built a 2D adventure game where the player can rest and start again at home. Unity, Photoshop, Git</div>
+			</div>
+		</div>
+
+		<div class="responsive">
+			<div class="experience">
+				<a target="_blank" href="img/recharge.png">
+					<img src="img/recharge.png" alt="recharge">
+				</a>
+				<div class="desc">Global Game Jam 2019: Built a 2D adventure game where the player can rest and start again at home. Unity, Photoshop, Git</div>
+			</div>
+		</div> -->
 
 		<div class="clearfix"></div>
 	</section>
@@ -106,35 +133,33 @@
 	<section id="projects">
 		<h1>Projects</h1>
 		<div class="container">
-			<img src="img/history.png" alt="history" class="image">
+			<img src="img/social_network.png" alt="social" class="image">
 			<div class="overlay">
-				<div class="text">History of Words: develop a program that can read in data files
-				on word occurrences in each decade from year 1800 - year 2009. C, GUI</div>
+				<div class="text">Social Network Model: Using relationship data from facebook to test the "Six Degrees of Separationdata" and discover certain sub-circles among the university. And finally using this model to recommend a friends with special features --Java, Dijkstra Algorithm, SQL</div>
 			</div>
 		</div>
 
 		<div class="container">
-			<img src="img/calculator.png" alt="calculator" class="image">
+			<img src="img/navagation & recommendation.png" alt="navagation" class="image">
 			<div class="overlay">
-				<div class="text">GPA Calculator: 
-					Established an Android app that calculates the the GPA of a class based on the student’s homework, quiz, midterm and final scores.
-				Java, Android API, ButterKnife Library</div>
+				<div class="text">Navigation & Recommendation System: 
+					Find out the shortest path from A to B. --C++, A* algorothm</div>
 			</div>
 		</div>
 
-		<div class="container">
+		<!-- <div class="container">
 			<img src="img/anime.png" alt="anime" class="image">
 			<div class="overlay">
 				<div class="text">Anime Index:
 				Programmed a web application that tracks the newest seasonal animes and animated movies. HTML, CSS, JavaScript, Bootstrap Library</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<!--resume-->
 	<section id="resume">
 		<h1>Resume</h1>
-		<iframe src="https://docs.google.com/gview?url=https://github.com/MoonJiao123/MoonJiao123.github.io/raw/master/Resume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+		<iframe src="/Cunji Song Resume.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
 	</section>
 	<!--scrolling effect-->
 	<script src="smooth-scroll.js"></script>
