--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		<div class="container">
 			<img src="img/social_network.png" alt="social" class="image">
 			<div class="overlay">
-				<div class="text">Social Network Model: Using relationship data from facebook to test the "Six Degrees of Separationdata" and discover certain sub-circles among the university. And finally using this model to recommend a friends with special features --Java, Dijkstra Algorithm, SQL</div>
+				<div class="text">Social Network Model: Using relationship data from facebook to test the "Six Degrees of Separationdata" and discover certain sub-circles among the university. And finally using this model to recommend a friend with special features --Java, Dijkstra Algorithm, SQL</div>
 			</div>
 		</div>
 
@@ -159,7 +159,7 @@
 	<!--resume-->
 	<section id="resume">
 		<h1>Resume</h1>
-		<iframe src="/Cunji Song Resume.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+		<iframe src="https://docs.google.com/document/d/e/2PACX-1vTrZZ-K9NpoMVWcFBXdCooucPtib3O6JtXvj_B6YNc5CPEvRXSmjS_p6Jt0PKwVTDU09FBlZJEero1G/pub" style="width:100%; height:100%;" frameborder="0"></iframe>
 	</section>
 	<!--scrolling effect-->
 	<script src="smooth-scroll.js"></script>
