--- a/index.html
+++ b/index.html
@@ -100,33 +100,7 @@
 			</div>
 		</div>
 
-		<!-- <div class="responsive">
-			<div class="experience">
-				<a target="_blank" href="img/recharge.png">
-					<img src="img/recharge.png" alt="recharge">
-				</a>
-				<div class="desc">Global Game Jam 2019: Built a 2D adventure game where the player can rest and start again at home. Unity, Photoshop, Git</div>
-			</div>
-		</div>
-
-		<div class="responsive">
-			<div class="experience">
-				<a target="_blank" href="img/recharge.png">
-					<img src="img/recharge.png" alt="recharge">
-				</a>
-				<div class="desc">Global Game Jam 2019: Built a 2D adventure game where the player can rest and start again at home. Unity, Photoshop, Git</div>
-			</div>
-		</div>
-
-		<div class="responsive">
-			<div class="experience">
-				<a target="_blank" href="img/recharge.png">
-					<img src="img/recharge.png" alt="recharge">
-				</a>
-				<div class="desc">Global Game Jam 2019: Built a 2D adventure game where the player can rest and start again at home. Unity, Photoshop, Git</div>
-			</div>
-		</div> -->
-
+	
 		<div class="clearfix"></div>
 	</section>
 	<!--projects-->
@@ -147,19 +121,13 @@
 			</div>
 		</div>
 
-		<!-- <div class="container">
-			<img src="img/anime.png" alt="anime" class="image">
-			<div class="overlay">
-				<div class="text">Anime Index:
-				Programmed a web application that tracks the newest seasonal animes and animated movies. HTML, CSS, JavaScript, Bootstrap Library</div>
-			</div>
-		</div>
+		
 	</section> -->
 
 	<!--resume-->
 	<section id="resume">
 		<h1>Resume</h1>
-		<iframe src="https://docs.google.com/document/d/e/2PACX-1vTrZZ-K9NpoMVWcFBXdCooucPtib3O6JtXvj_B6YNc5CPEvRXSmjS_p6Jt0PKwVTDU09FBlZJEero1G/pub" style="width:100%; height:100%;" frameborder="0"></iframe>
+		<iframe src="/Cunji Song Resume.pdf" style="width:100%; height:900px;" frameborder="0"></iframe>
 	</section>
 	<!--scrolling effect-->
 	<script src="smooth-scroll.js"></script>
