--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	<!--resume-->
 	<section id="resume">
 		<h1>Resume</h1>
-		<iframe src="/Cunji Song Resume.pdf" style="width:100%; height:900px;" frameborder="0"></iframe>
+		<iframe src="./Cunji Song Resume.pdf" style="width:100%; height:900px;" frameborder="0"></iframe>
 	</section>
 	<!--scrolling effect-->
 	<script src="smooth-scroll.js"></script>
