--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<title>Cunji Song's personal site</title>
 </head>
-<body>
+<body style="background-color:rgb(240, 250, 252);">
 
 	<!--navigator-->
 	<section id = "nav-bar">
@@ -48,7 +48,7 @@
 
 		<!--introductiom-->
 		<div class="jumbotron">
-			<p>I am new graduate student at University of California, San Diego. I am graduateing around end of 2020. Here are some projects I have, for more information, feel free to contact me . Thanks for your time! :) </p>
+			<p style="font-size:150%;"> <b>I am new graduate student at University of California, San Diego. I am graduateing around end of 2020. <br> Here are some projects I have. For more information, feel free to contact me . <br> Thanks for your time! :)</b> </p>
 		</div>
 
 		<!--contact images-->
@@ -140,5 +140,5 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 
-</body>
+</bodystyle="background-color:powderblue;">
 </html>
