--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 		<!--introductiom-->
 		<div class="jumbotron">
-			<p style="font-size:150%;"> <b>I am new graduate student at University of California, San Diego. I am graduateing around end of 2020. <br> Here are some projects I have. For more information, feel free to contact me . <br> Thanks for your time! :)</b> </p>
+			<p style="font-size:150%;"> <b>I am new graduate student at University of California, San Diego. I am graduating around end of 2020. <br> Here are some projects I have done. For more information, feel free to contact me . <br> Thanks for your time! :)</b> </p>
 		</div>
 
 		<!--contact images-->
