add file compress

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<title>Cunji Song's personal site</title>
 </head>
-<body style="background-color:rgb(240, 250, 252);">
+ style="background-color:rgb(240, 250, 252);">
 
 	<!--navigator-->
 	<section id = "nav-bar">
@@ -48,7 +48,7 @@
 
 		<!--introductiom-->
 		<div class="jumbotron">
-			<p style="font-size:150%;"> <b>I am new graduate student at University of California, San Diego. I am graduating around end of 2020. <br> Here are some projects I have done. For more information, feel free to contact me . <br> Thanks for your time! :)</b> </p>
+			<p style="font-size:150%;"> <br>I am new graduate student at University of California, San Diego. I am graduating around end of 2020. <br> Here are some projects I have done. For more information, feel free to contact me . <br> Thanks for your time! :)</br> </p>
 		</div>
 
 		<!--contact images-->
@@ -71,12 +71,12 @@
 					<img src="img/e-commerce.png" alt="e-commerce">
 				</a>
 				<div class="desc">It's about bookstore, it is similar for all E-Commerce website. Those modules contains:
-					- User Signup and Login				
-					- User profile management		
-					- Product Management
-					- Shopping Cart 
-					- Order checkout and order history
-					- Automatic email confirmation	
+					<br>- User Signup and Login				
+					<br>- User profile management		
+					<br>- Product Management
+					<br>- Shopping Cart 
+					<br>- Order checkout and order history
+					<br>- Automatic email confirmation	
 					</div>
 			</div>
 		</div>
@@ -86,8 +86,8 @@
 				<a target="_blank" href="img/garbage_classification2.jpg">
 					<img src="img/garbage_classification2.jpg" alt="Garbage">
 				</a>
-				<div class="desc">Compus Competition: Garbage classification assistance-especially useful for helping citizens classify the recyclable and non-recyclable trash,
-					Python, AWS, Sequel Pro, SQL, JavaScript,  HTML, CSS, Bootstrap</div>
+				<div class="desc">Compus Competition:<br> --Garbage classification assistance-especially useful for helping citizens classify the recyclable and non-recyclable trash,
+					<br>--Python, AWS, Sequel Pro, SQL, JavaScript,  HTML, CSS, Bootstrap</div>
 			</div>
 		</div>
 
@@ -96,7 +96,7 @@
 				<a target="_blank" href="img/alien_invasion.png">
 					<img src="img/alien_invasion.png" alt="alien">
 				</a>
-				<div class="desc">Fancy Game Competition: An Alien Invasion game written in Python programming language using Pygame library --Python, Pygame, AWS, Git</div>
+				<div class="desc">Fancy Game Competition:<br> --An Alien Invasion game<br> --Programming language and library: Python, Pygame, AWS, Git</div>
 			</div>
 		</div>
 
@@ -109,15 +109,31 @@
 		<div class="container">
 			<img src="img/social_network.png" alt="social" class="image">
 			<div class="overlay">
-				<div class="text">Social Network Model: Using relationship data from facebook to test the "Six Degrees of Separationdata" and discover certain sub-circles among the university. And finally using this model to recommend a friend with special features --Java, Dijkstra Algorithm, SQL</div>
+				<div class="text"><br>Social Network Model, UCSD</br>
+					<br>- Designed and implemented a social network model using relationship data from IMDB to test the " six adegrees of separation" </br>
+					<br>- Find the shortest relationship path from one actor to another actor through shared movies.</br>
+					<br>- Predicting future links in a social network and infer future collaboration.</br>
+					<br>- Language and frameworks:  C++, Meson, Dijkstra algorithm, Kruskal algorithm</br>
+					</div>
 			</div>
 		</div>
 
 		<div class="container">
 			<img src="img/navagation & recommendation.png" alt="navagation" class="image">
 			<div class="overlay">
-				<div class="text">Navigation & Recommendation System: 
-					Find out the shortest path from A to B. --C++, A* algorothm</div>
+				<div class="text"><br>Navigation & Recommendation System: </br>
+					<br>-Find out the shortest path from A to B.</br> 
+					<br>-C++, A* algorothm</br></div>
+			</div>
+		</div>
+
+		<div class="container">
+			<img src="img/file_compress.png" alt="file_compress" class="image">
+			<div class="overlay">
+				<div class="text"><br>Huffman Encoding and Compression, UCSD</br>
+					<br>- Implement a Huffman Coding Tree and bitwise i/o to compress files.</br>
+					<br>- Statistically, the data compression ratio reaches up to 60%.</br>
+					<br>- Language and frameworks: C++, Huffman Tree</br></div>
 			</div>
 		</div>
 
