--- a/index.html
+++ b/index.html
@@ -46,20 +46,23 @@
 			<h1>Hi, I am Cunji Song. Nice to meet you!</h1>
 		</div>
 
-		<!--introductiom-->
-		<div class="jumbotron">
-			<p style="font-size:150%;"> <br>I am new graduate student at University of California, San Diego. I am graduating around end of 2020. <br> Here are some projects I have done. For more information, feel free to contact me . <br> Thanks for your time! :)</br> </p>
-		</div>
-
 		<!--contact images-->
 		<div class="row">
 			<div class="column">
 				<a href="https://github.com/younotafish"><img src="img/github.png" alt="Snow" style="width:100%"></a>
 			</div>
 			<div class="column">
-				<a href="https://www.linkedin.com/in/song-cunji-52069a163/"><img src="img/linkedin.png" alt="Forest" style="width:100%"></a>
+				<a href="https://www.linkedin.com/in/song-cunji-52069a163/"><img src="img/linkedin.png" alt="Forest"
+						style="width:100%"></a>
 			</div>
 		</div>
+
+		<!--introductiom-->
+		<div class="jumbotron">
+			<p style="font-size:150%;"> <br>I am a graduate student at UC San Diego.  <br> Here are some projects I have done. For more information, feel free to contact me . <br> Thanks for your time! :)</br> </p>
+		</div>
+
+		
 	</section>
 
 	<!--related experiences-->
@@ -67,9 +70,8 @@
 		<h1>Related Expereince</h1>
 		<div class="responsive">
 			<div class="experience">
-				<a target="_blank" href="img/e-commerce.png">
-					<img src="img/e-commerce.png" alt="e-commerce">
-				</a>
+				<iframe  src="https://www.youtube.com/embed/qGyih1lg-CQ" frameborder="0"
+					allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<div class="desc">It's about bookstore, it is similar for all E-Commerce website. Those modules contains:
 					<br>- User Signup and Login				
 					<br>- User profile management		
@@ -93,19 +95,61 @@
 
 		<div class="responsive">
 			<div class="experience">
-				<a target="_blank" href="img/alien_invasion.png">
-					<img src="img/alien_invasion.png" alt="alien">
-				</a>
-				<div class="desc">Fancy Game Competition:<br> --An Alien Invasion game<br> --Programming language and library: Python, Pygame, AWS, Git</div>
+				<iframe  src="https://www.youtube.com/embed/LiQBcPudNH4" frameborder="0"
+					allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<div class="desc">Tecent Hackthon<br> --An Alien Invasion game<br> --Programming language and library: Python, Pygame, AWS, Git</div>
 			</div>
 		</div>
 
 	
 		<div class="clearfix"></div>
 	</section>
+
+	<!--Personal Project-->
+	<section id="experience">
+		<h1>Personal Project</h1>
+		<div class="responsive">
+			<div class="experience">
+				<iframe  src="https://www.youtube.com/embed/RbSupw8_b7k" frameborder="0"
+					allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<div class="desc">PPMTOOL, it is similar for all E-Commerce website. Those modules contains:
+					<br>- User Signup and Login
+					<br>- User profile management
+					<br>- Product Management
+					<br>- Shopping Cart
+					<br>- Order checkout and order history
+					<br>- Automatic email confirmation
+				</div>
+			</div>
+		</div>
+	
+		<div class="responsive">
+			<div class="experience">
+				<a target="_blank" href="img/garbage_classification2.jpg">
+					<img src="img/garbage_classification2.jpg" alt="Garbage">
+				</a>
+				<div class="desc">Compus Competition:<br> --Garbage classification assistance-especially useful for helping
+					citizens classify the recyclable and non-recyclable trash,
+					<br>--Python, AWS, Sequel Pro, SQL, JavaScript, HTML, CSS, Bootstrap</div>
+			</div>
+		</div>
+	
+		<div class="responsive">
+			<div class="experience">
+				<iframe src="https://www.youtube.com/embed/bznn9O19OPg" frameborder="0"
+					allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen></iframe>
+				<div class="desc">Fancy Game Competition:<br> --An Alien Invasion game<br> --Programming language and
+					library: Python, Pygame, AWS, Git</div>
+			</div>
+		</div>
+	
+	
+		<div class="clearfix"></div>
+	</section>
 	<!--projects-->
 	<section id="projects">
-		<h1>Projects</h1>
+		<h1>Course Projects</h1>
 		<div class="container">
 			<img src="img/social_network.png" alt="social" class="image">
 			<div class="overlay">
@@ -138,7 +182,7 @@
 		</div>
 
 		
-	</section> -->
+	</section>
 
 	<!--resume-->
 	<section id="resume">
