--- a/index.html
+++ b/index.html
@@ -70,34 +70,36 @@
 		<h1>Related Expereince</h1>
 		<div class="responsive">
 			<div class="experience">
-				<iframe  src="https://www.youtube.com/embed/qGyih1lg-CQ" frameborder="0"
-					allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<div class="desc">It's about bookstore, it is similar for all E-Commerce website. Those modules contains:
-					<br>- User Signup and Login				
-					<br>- User profile management		
-					<br>- Product Management
-					<br>- Shopping Cart 
-					<br>- Order checkout and order history
-					<br>- Automatic email confirmation	
-					</div>
+				<img src="img/run the world.png" alt="social" class="image">
+				<div class="desc">Backend Intern at Run The World
+					<br>- Developed backend APIs which connect frontend and database using GO frameworks
+					<br>- Added new functions to internal developing tools
+				</div>
 			</div>
 		</div>
 
-		<div class="responsive">
-			<div class="experience">
-				<a target="_blank" href="img/garbage_classification2.jpg">
-					<img src="img/garbage_classification2.jpg" alt="Garbage">
-				</a>
-				<div class="desc">Compus Competition:<br> --Garbage classification assistance-especially useful for helping citizens classify the recyclable and non-recyclable trash,
-					<br>--Python, AWS, Sequel Pro, SQL, JavaScript,  HTML, CSS, Bootstrap</div>
-			</div>
-		</div>
+		
 
 		<div class="responsive">
 			<div class="experience">
 				<iframe  src="https://www.youtube.com/embed/LiQBcPudNH4" frameborder="0"
 					allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<div class="desc">Tecent Hackthon<br> --An Alien Invasion game<br> --Programming language and library: Python, Pygame, AWS, Git</div>
+			</div>
+		</div>
+
+		<div class="responsive">
+			<div class="experience">
+				<iframe src="https://www.youtube.com/embed/qGyih1lg-CQ" frameborder="0"
+					allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<div class="desc">It's about bookstore, it is similar for all E-Commerce website. Those modules contains:
+					<br>- User Signup and Login
+					<br>- User profile management
+					<br>- Product Management
+					<br>- Shopping Cart
+					<br>- Order checkout and order history
+					<br>- Automatic email confirmation
+				</div>
 			</div>
 		</div>
 
@@ -187,7 +189,7 @@
 	<!--resume-->
 	<section id="resume">
 		<h1>Resume</h1>
-		<iframe src="./Cunji Song Resume.pdf" style="width:100%; height:900px;" frameborder="0"></iframe>
+		<iframe src="./Resume Cunji Song.pdf" style="width:100%; height:900px;" frameborder="0"></iframe>
 	</section>
 	<!--scrolling effect-->
 	<script src="smooth-scroll.js"></script>
